# saharo-cli

./: .gitignore  CLI_K8S_COMMAND_MODEL.md  CONTRIBUTING.md  LICENSE  NOTICE  OPEN_CORE.md  README.md  ROADMAP.md  RUST_CLI_MIGRATION_TRACKER.md  SECURITY.md  TRADEMARKS.md  VERSIONING.md
cli/: README.md  pyproject.toml  saharo.spec  saharo_entrypoint.py
cli/saharo_cli/: auth_state.py  compat.py  config.py  console.py  entrypoint.py  http.py  interactive.py  license_resolver.py  logging_.py  main.py  path_utils.py  registry_store.py  ssh.py  tui_app.py
cli/saharo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/saharo_cli/commands/: agents_cmd.py  auth_cmd.py  config_cmd.py  grants_cmd.py  health_cmd.py  host_bootstrap.py  host_cmd.py  host_https.py  init_cmd.py  invite_cmd.py  jobs_cmd.py  logs_cmd.py  portal_cmd.py  self_cmd.py  servers_cmd.py  services_cmd.py  settings_cmd.py  updates_cmd.py  users_cmd.py
cli/tests/: test_agents_delete.py  test_agents_install.py  test_agents_show.py  test_config.py  test_config_awg_uri.py  test_grants_resolution.py  test_host_bootstrap_compose.py  test_host_bootstrap_remote_http.py  test_host_bootstrap_wipe.py  test_http_profile.py  test_invite_accept.py  test_jobs_get_alias.py  test_license_resolver.py  test_logs_agent_lookup.py  test_path_utils.py  test_servers_create_bootstrap.py  test_settings_commands.py  test_ssh.py  test_whoami_command.py
deprecated/: README.md
deprecated/python-cli/: README.md  saharo.spec
deprecated/python-cli/saharo_cli/: auth.py  config.py  console.py  errors.py  formatting.py  interactive_menu.py  keys.py  license_resolver.py  registry_store.py  semver.py
deprecated/python-cli/saharo_cli.egg-info/: top_level.txt
deprecated/python-cli/tests/: test_agents_delete.py  test_agents_show.py  test_formatting.py  test_grants_resolution.py  (+9 more)
deprecated/python-sdk/: README.md  pyproject.toml
deprecated/python-sdk/saharo_client/: compat.py  config_types.py  errors.py  errors_utils.py  hosts.py  licensing.py  polling.py  resolve.py  semver.py  servers.py  transport.py  updates.py
deprecated/python-sdk/saharo_client.egg-info/: top_level.txt
lib/: README.md  pyproject.toml
lib/saharo_client/: __init__.py  client.py  config_types.py  configs.py  hosts.py  jobs.py  registry.py  transport.py  updates.py
lib/saharo_client.egg-info/: PKG-INFO  SOURCES.txt
rust-cli/: Cargo.toml
rust-cli/src/: auth.rs  config.rs  console.rs  health.rs  host_join.rs  invites_cmd.rs  jobs_cmd.rs  k8s_cmd.rs  main.rs  portal_cmd.rs  pretty_kv.rs  principal_cmd.rs  registry.rs  roles_cmd.rs  services_cmd.rs  settings.rs  updates_cmd.rs  vpn_config.rs
rust-sdk/: Cargo.toml
rust-sdk/src/: access_facade.rs  admin_facade.rs  admin_ops.rs  api.rs  auth_facade.rs  awg.rs  awg_keys.rs  health_facade.rs  lib.rs  models.rs  vpn_config_facade.rs
tools/: e2e_smoke_rust_cli.sh
(+9 files in other folders)
