[package]
name = "saharoctl"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dialoguer = "0.11"
directories = "5.0"
flate2 = "1.0"
humantime = "2.1"
owo-colors = "4.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
saharo-sdk = { path = "../rust-sdk" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
