[package]
name = "saharo-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
flate2 = "1.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
